<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_blue"
    android:padding="16dp">

    <!-- Layout for a single hospital item -->
    <RelativeLayout
        android:id="@+id/item_HospitalImageRelativeLayout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/item_HospitalImageCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="50dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/item_HospitalImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/ic_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_hospital_placeholder" />

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

    <TextView
        android:id="@+id/item_HospitalNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Hospital_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_HospitalImageRelativeLayout"
        app:layout_constraintTop_toTopOf="@id/item_HospitalImageRelativeLayout" />

    <TextView
        android:id="@+id/item_HospitalAddressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/Hospital_address"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/item_HospitalNameTextView"
        app:layout_constraintTop_toBottomOf="@id/item_HospitalNameTextView" />

    <TextView
        android:id="@+id/item_HospitalInfoNumberTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/Hospital_LandPhone"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/item_HospitalAddressTextView"
        app:layout_constraintTop_toBottomOf="@id/item_HospitalAddressTextView" />

    <TextView
        android:id="@+id/item_HospitalMobileNumberTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/Hospital_MobilePhone"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/item_HospitalInfoNumberTextView"
        app:layout_constraintTop_toBottomOf="@id/item_HospitalInfoNumberTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
